docs/lib/sql-en-castellano/sql-en-castellano.parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function(root) {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { Lenguaje: peg$parseLenguaje },
        peg$startRuleFunction  = peg$parseLenguaje,

        peg$c0 = function(sentencia) { return sentencia },
        peg$c1 = "Selecciono",
        peg$c2 = peg$literalExpectation("Selecciono", false),
        peg$c3 = function(campos, de_tabla, junto, donde, ordenado_por, paginado_en, creando) { return { operacion: "Selecciono", campos, de_tabla, junto, donde, ordenado_por, paginado_en, creando } },
        peg$c4 = "campos",
        peg$c5 = peg$literalExpectation("campos", false),
        peg$c6 = function(campos) { return campos },
        peg$c7 = "*",
        peg$c8 = peg$literalExpectation("*", false),
        peg$c9 = "de tabla",
        peg$c10 = peg$literalExpectation("de tabla", false),
        peg$c11 = function(tabla) { return tabla },
        peg$c12 = "junto por la izquierda",
        peg$c13 = peg$literalExpectation("junto por la izquierda", false),
        peg$c14 = "junto por la derecha",
        peg$c15 = peg$literalExpectation("junto por la derecha", false),
        peg$c16 = "junto todo",
        peg$c17 = peg$literalExpectation("junto todo", false),
        peg$c18 = "junto lo com\xFAn",
        peg$c19 = peg$literalExpectation("junto lo com\xFAn", false),
        peg$c20 = "junto",
        peg$c21 = peg$literalExpectation("junto", false),
        peg$c22 = "por",
        peg$c23 = peg$literalExpectation("por", false),
        peg$c24 = function(token0, operador, token1, tabla, token2, condicion) { return { tabla, operador, condicion } },
        peg$c25 = "donde",
        peg$c26 = peg$literalExpectation("donde", false),
        peg$c27 = function(condicion) { return condicion },
        peg$c28 = "ordenado por",
        peg$c29 = peg$literalExpectation("ordenado por", false),
        peg$c30 = function(sentido) { return sentido },
        peg$c31 = function(inicial, otras) { return otras ? [inicial, ...otras] : [inicial]; },
        peg$c32 = function(nombre, sentido) { return { nombre, sentido } },
        peg$c33 = ",",
        peg$c34 = peg$literalExpectation(",", false),
        peg$c35 = function(regla) { return regla },
        peg$c36 = "ascendentemente",
        peg$c37 = peg$literalExpectation("ascendentemente", false),
        peg$c38 = "descendentemente",
        peg$c39 = peg$literalExpectation("descendentemente", false),
        peg$c40 = "en p\xE1gina",
        peg$c41 = peg$literalExpectation("en p\xE1gina", false),
        peg$c42 = "con",
        peg$c43 = peg$literalExpectation("con", false),
        peg$c44 = "\xEDtems por p\xE1gina",
        peg$c45 = peg$literalExpectation("\xEDtems por p\xE1gina", false),
        peg$c46 = function(pagina, items) { return { pagina, items } },
        peg$c47 = "creando",
        peg$c48 = peg$literalExpectation("creando", false),
        peg$c49 = function(creando) { return creando },
        peg$c50 = "(",
        peg$c51 = peg$literalExpectation("(", false),
        peg$c52 = ")",
        peg$c53 = peg$literalExpectation(")", false),
        peg$c54 = function(token0, token1, condicion, tokenZ, complementos) { return { tipo: "condición compleja", condicion, complementos } },
        peg$c55 = function(sujeto, predicado, complementos) { return { tipo: "condición simple", sujeto, predicado, complementos } },
        peg$c56 = "y",
        peg$c57 = peg$literalExpectation("y", false),
        peg$c58 = "o",
        peg$c59 = peg$literalExpectation("o", false),
        peg$c60 = function(token0, operador, token1, condicion) { return { operador, condicion } },
        peg$c61 = " = ",
        peg$c62 = peg$literalExpectation(" = ", false),
        peg$c63 = " != ",
        peg$c64 = peg$literalExpectation(" != ", false),
        peg$c65 = " <= ",
        peg$c66 = peg$literalExpectation(" <= ", false),
        peg$c67 = " >= ",
        peg$c68 = peg$literalExpectation(" >= ", false),
        peg$c69 = " < ",
        peg$c70 = peg$literalExpectation(" < ", false),
        peg$c71 = " > ",
        peg$c72 = peg$literalExpectation(" > ", false),
        peg$c73 = " est\xE1 entre ",
        peg$c74 = peg$literalExpectation(" est\xE1 entre ", false),
        peg$c75 = " no est\xE1 entre ",
        peg$c76 = peg$literalExpectation(" no est\xE1 entre ", false),
        peg$c77 = " es como ",
        peg$c78 = peg$literalExpectation(" es como ", false),
        peg$c79 = " no es como ",
        peg$c80 = peg$literalExpectation(" no es como ", false),
        peg$c81 = function(operador, operando) { return { operador, operando } },
        peg$c82 = "es nulo",
        peg$c83 = peg$literalExpectation("es nulo", false),
        peg$c84 = "no es nulo",
        peg$c85 = peg$literalExpectation("no es nulo", false),
        peg$c86 = function() { return text()},
        peg$c87 = ".",
        peg$c88 = peg$literalExpectation(".", false),
        peg$c89 = function(bd, tabla, columna) { return { bd, tabla, columna } },
        peg$c90 = function(tabla, columna) { return { tabla, columna } },
        peg$c91 = function(columna) { return { columna } },
        peg$c92 = function(tabla) { return { tabla } },
        peg$c93 = function(bd, tabla) { return { bd, tabla } },
        peg$c94 = /^[A-Za-z_$]/,
        peg$c95 = peg$classExpectation([["A", "Z"], ["a", "z"], "_", "$"], false, false),
        peg$c96 = /^[0-9A-Za-z_$]/,
        peg$c97 = peg$classExpectation([["0", "9"], ["A", "Z"], ["a", "z"], "_", "$"], false, false),
        peg$c98 = function() { return text() },
        peg$c99 = /^[0-9]/,
        peg$c100 = peg$classExpectation([["0", "9"]], false, false),
        peg$c101 = function() { return parseInt(text()) },
        peg$c102 = "'",
        peg$c103 = peg$literalExpectation("'", false),
        peg$c104 = "\\'",
        peg$c105 = peg$literalExpectation("\\'", false),
        peg$c106 = "\\",
        peg$c107 = peg$literalExpectation("\\", false),
        peg$c108 = peg$anyExpectation(),
        peg$c109 = "\"",
        peg$c110 = peg$literalExpectation("\"", false),
        peg$c111 = "\\\"",
        peg$c112 = peg$literalExpectation("\\\"", false),
        peg$c113 = "Inserto",
        peg$c114 = peg$literalExpectation("Inserto", false),
        peg$c115 = function(en_tabla, valores) { return { operacion: "Inserto", en_tabla, valores } },
        peg$c116 = "en tabla",
        peg$c117 = peg$literalExpectation("en tabla", false),
        peg$c118 = "valores",
        peg$c119 = peg$literalExpectation("valores", false),
        peg$c120 = function(valores) { return valores },
        peg$c121 = "{",
        peg$c122 = peg$literalExpectation("{", false),
        peg$c123 = "}",
        peg$c124 = peg$literalExpectation("}", false),
        peg$c125 = function(token0, valor_1, valor_n, tokenZ) { return [valor_1].concat(valor_n ? valor_n : []) },
        peg$c126 = ":",
        peg$c127 = peg$literalExpectation(":", false),
        peg$c128 = function(nombre, valor) { return { nombre, valor } },
        peg$c129 = function(valor) { return valor },
        peg$c130 = "Actualizo",
        peg$c131 = peg$literalExpectation("Actualizo", false),
        peg$c132 = function(en_tabla, donde, valores) { return { operacion: "Actualizo", en_tabla, donde, valores } },
        peg$c133 = "Elimino",
        peg$c134 = peg$literalExpectation("Elimino", false),
        peg$c135 = function(en_tabla, donde) { return { operacion: "Elimino", en_tabla, donde } },
        peg$c136 = " ",
        peg$c137 = peg$literalExpectation(" ", false),
        peg$c138 = "\t",
        peg$c139 = peg$literalExpectation("\t", false),
        peg$c140 = "\r\n",
        peg$c141 = peg$literalExpectation("\r\n", false),
        peg$c142 = "\r",
        peg$c143 = peg$literalExpectation("\r", false),
        peg$c144 = "\n",
        peg$c145 = peg$literalExpectation("\n", false),
        peg$c146 = "/*",
        peg$c147 = peg$literalExpectation("/*", false),
        peg$c148 = "*/",
        peg$c149 = peg$literalExpectation("*/", false),

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseLenguaje() {
      var s0, s1;

      s0 = [];
      s1 = peg$parseSentencia_completa();
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$parseSentencia_completa();
      }

      return s0;
    }

    function peg$parseSentencia_completa() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse_();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseSentencia();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseEOS();
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parse_();
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parse_();
            }
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c0(s2);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseSentencia() {
      var s0;

      s0 = peg$parseSentencia_Selecciono();
      if (s0 === peg$FAILED) {
        s0 = peg$parseSentencia_Inserto();
        if (s0 === peg$FAILED) {
          s0 = peg$parseSentencia_Actualizo();
          if (s0 === peg$FAILED) {
            s0 = peg$parseSentencia_Elimino();
          }
        }
      }

      return s0;
    }

    function peg$parseSentencia_Selecciono() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 10) === peg$c1) {
        s1 = peg$c1;
        peg$currPos += 10;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseSubs_campos_de_seleccion();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseSubs_de_tabla();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseSubs_junto();
            if (s4 === peg$FAILED) {
              s4 = null;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseSubs_donde();
              if (s5 === peg$FAILED) {
                s5 = null;
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parseSubs_ordenado_por();
                if (s6 === peg$FAILED) {
                  s6 = null;
                }
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseSubs_paginado_en();
                  if (s7 === peg$FAILED) {
                    s7 = null;
                  }
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parseSubs_creando();
                    if (s8 === peg$FAILED) {
                      s8 = null;
                    }
                    if (s8 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c3(s2, s3, s4, s5, s6, s7, s8);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseSubs_campos_de_seleccion() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parse_();
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 6) === peg$c4) {
          s2 = peg$c4;
          peg$currPos += 6;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c5); }
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            while (s4 !== peg$FAILED) {
              s3.push(s4);
              s4 = peg$parse_();
            }
          } else {
            s3 = peg$FAILED;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseSeleccion_de_campos_todos();
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c6(s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseSeleccion_de_campos_todos() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 42) {
        s0 = peg$c7;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }

      return s0;
    }

    function peg$parseSubs_de_tabla() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parse_();
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 8) === peg$c9) {
          s2 = peg$c9;
          peg$currPos += 8;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c10); }
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            while (s4 !== peg$FAILED) {
              s3.push(s4);
              s4 = peg$parse_();
            }
          } else {
            s3 = peg$FAILED;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseNombre_simple();
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c11(s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseSubs_junto() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;
